Fixed image clipping in work list

--- a/files/css/main.sass
+++ b/files/css/main.sass
@@ -361,14 +361,14 @@ body
                 margin-right: 5vh
 
             &.hover img
-                width: 110%
-                height: auto
 	            filter: url(#waveTurbulance)
                 -webkit-filter: url(#waveTurbulance)
 
             img
                 z-index: 1
                 height: 110%
+                width: 110%
+                object-fit: cover
                 position: absolute
                 top: 50%;
                 left: 50%;
